test/expected/typedef_v_explain_v.out
typedef void Void; explain Void x
         ^
10: error: variable of void; did you mean pointer to void?
